--- a/CobblemonKanto/data/cobblemon/npcs/trader_npcs/cerulean_jynx.json
+++ b/CobblemonKanto/data/cobblemon/npcs/trader_npcs/cerulean_jynx.json
@@ -1,14 +1,14 @@
 {
-  "resourceIdentifier": "cobblemon:schoolboy",
+  "resourceIdentifier": "cobblemon:oldman",
   "names": [
-    "§lTrader Reyley"
+    "§lTrader Dontae"
   ],
   "presets": [
     "trainer_basics"
   ],
   "interaction": {
     "type": "dialogue",
-    "dialogue": "cobblemon:route2_mrmime_interaction"
+    "dialogue": "cobblemon:cerulean_jynx_interaction"
   },
   "config": [
     {
@@ -16,28 +16,28 @@
       "displayName": "Trade Offer Pokemon for GUI",
       "description": "Trade Offer Pokemon (What is shown to user)",
       "type": "TEXT",
-      "defaultValue": "Mr. Mime"
+      "defaultValue": "Jynx"
     },
     {
       "variableName": "trade_offered",
       "displayName": "Trade Offer Pokemon for MoLang",
       "description": "Trade Offer Pokemon along with any properties (All lowercase)",
       "type": "TEXT",
-      "defaultValue": "MrMime level=10 nickname=Mimien"
+      "defaultValue": "jynx level=10 nickname=Zynx"
     },
     {
       "variableName": "trade_requested_display",
       "displayName": "Trade Requested Pokemon for GUI",
       "description": "Trade Requested Pokemon (What is shown to user)",
       "type": "TEXT",
-      "defaultValue": "Abra"
+      "defaultValue": "Poliwhirl"
     },
     {
       "variableName": "trade_requested",
       "displayName": "Trade Request Pokemon for MoLang",
       "description": "Trade Request Pokemon along with any properties (All lowercase)",
       "type": "TEXT",
-      "defaultValue": "abra"
+      "defaultValue": "poliwhirl"
     },
     {
       "variableName": "trade_requested_min_level",
