--- a/CobblemonKanto/data/cobblemon/npcs/trader_npcs/cerulean_jynx.json
+++ b/CobblemonKanto/data/cobblemon/npcs/trader_npcs/cerulean_jynx.json
@@ -4,7 +4,7 @@
     "§lTrader Dontae"
   ],
   "presets": [
-    "trainer_basics"
+    "cobblemon:trainer_basics"
   ],
   "interaction": {
     "type": "dialogue",
